--- a/package.json
+++ b/package.json
@@ -94,11 +94,13 @@
     "react-sortable-hoc": "^2.0.0",
     "react-split-pane": "^2.0.3",
     "react-to-print": "^2.14.7",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.6",
     "tinymce": "^5.10.0",
     "umi": "~3.5.0",
     "umi-serve": "~1.9.10",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -123,7 +125,7 @@
     "@umijs/preset-dumi": "^1.1.7",
     "@umijs/preset-react": "^1.7.4",
     "@umijs/yorkie": "^2.0.3",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "eslint": "^7.1.0",
     "express": "^4.17.1",
